kubernetes/ingress/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
  - host: alpaca.example.com
    http:
      paths:
      - backend:
          service:
            name: alpaca
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: bandicoot.example.com
    http:
      paths:
      - backend:
          service:
            name: bandicoot
            port:
              number: 80
        path: /
        pathType: Prefix
